# cloler.ai

./: .env.development.example  .env.example  .env.production.example  .gitignore  CONTRIBUTING.md  PROJECT_BUILD_PLAN.md  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: ci.yml
apps/admin/: components.json  env.ts  instrumentation-client.ts  instrumentation.ts  next.config.ts  package.json  tsconfig.tsbuildinfo
apps/admin/app/: globals.css  layout.tsx  page.tsx
apps/dashboard/: .env.development.example  .env.example  .env.production.example  env.ts  instrumentation-client.ts  instrumentation.ts  package.json  proxy.ts  sentry.server.config.ts  tsconfig.json  tsconfig.tsbuildinfo
apps/dashboard/app/: convex-client-provider.tsx  dashboard-nav.ts  dashboard-placeholder.tsx  dashboard-shell.tsx  globals.css  layout.tsx  page.tsx  require-dashboard-session.ts  workspace-config.ts  workspace-overview.tsx
apps/marketing/: env.ts  instrumentation-client.ts  instrumentation.ts  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/widget/: env.ts  instrumentation-client.ts  instrumentation.ts  next.config.ts  package.json  tsconfig.tsbuildinfo
convex/: README.md  auth.config.ts  dashboard.ts  schema.ts  seed.ts  voices.ts
convex/_generated/: api.d.ts
convex/lib/: auth.ts  logger.ts  organizationQueries.ts  syncBoundaries.ts
scripts/: setup-sentry.mjs  validate-env.mjs
services/telephony-agent/: README.md  pyproject.toml
services/telephony-agent/src/cloler_telephony/: main.py
services/voice-cloning/: README.md
(+21 files in other folders)
